build: make the build work on Gradle 9
The Dependabot merges took the wrapper from 8.10.2 to 9.7.1, and Gradle 9 ships Groovy 4,
where XmlSlurper is no longer in the default imports. That is a script compilation error, so
every Gradle invocation failed before doing any work -- locally and in CI:

    build.gradle: 121: unable to resolve class XmlSlurper

Qualify it as groovy.xml.XmlSlurper.

While here, clear everything else Gradle 9 flags, so the next wrapper bump does not break the
build the same way. All of it is scheduled for removal in Gradle 10:

- The space-assignment syntax ("group 'x'", "exceptionFormat 'full'") becomes "group = 'x'".
- afterSuite/beforeTest/afterTest closures on the test task are deprecated in favour of
  addTestListener. Only the end-of-run tally is kept: the per-test chatter those closures also
  printed duplicated testLogging, which already reports each failure with a full stack trace.
- project.buildDir gives way to layout.buildDirectory.

The remaining Dependabot bumps are fine and stay as they are. All the action tags exist
(download-artifact v8, setup-java v6, github-script v9, gradle/actions v6), JUnit 6.1.3 runs
the suite unchanged, and Checkstyle still produces its reports with the Guava pin at 23.0.

Also fixes the last deprecation warning in the Java sources, a Thread.getId() call in
BusyWaitingExampleTest, and renormalises gradlew.bat, which was committed with CRLF and so
showed as modified in every working tree. Build and tests are green, 163/163, with no
compiler or Gradle warnings left.